@@ -69,7 +69,7 @@ public final class SWPipeline extends GraphicsPipeline {
     }
 
     @Override public ResourceFactory getResourceFactory(Screen screen) {
-        Integer index = new Integer(screen.getAdapterOrdinal());
+        Integer index = Integer.valueOf(screen.getAdapterOrdinal());
         SWResourceFactory factory = factories.get(index);
         if (factory == null) {
             factory = new SWResourceFactory(screen);
